--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,9 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/eventempire
 JWT_SECRET=your_jwt_secret_key_here
 EMAIL_SERVICE=gmail
-EMAIL_USER=darshanclassic8@gmail.com
-EMAIL_PASS=qgqp rglr bahh whcx
+EMAIL_USER=tripathiraj3030@gmail.com
+EMAIL_PASS=kpwu vgkp mxcu qcha
+
+# Razorpay Configuration (Update with your credentials from https://dashboard.razorpay.com/app/keys)
+RAZORPAY_KEY_ID=rzp_test_placeholder_key_id
+RAZORPAY_KEY_SECRET=placeholder_secret_key_update_this
