--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,56 @@
-# Node modules
+# Dependencies
 node_modules/
-# Build output
+client/node_modules/
+server/node_modules/
+package-lock.json
+yarn.lock
+
+# Environment Variables (CRITICAL - contains secrets!)
+.env
+.env.local
+.env.production
+.env.development
+server/.env
+client/.env
+
+# Build outputs
 client/build/
 client/dist/
+server/dist/
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# OS files
+lerna-debug.log*
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+
+# OS Files
 Thumbs.db
+.DS_Store
+*.tmp
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.cache/
+.temp/
+.artifacts/
+
+# MongoDB database files (if running locally)
+data/
+*.db
+
+# PM2 process manager
+.pm2/
