--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/eventempire
 JWT_SECRET=your_jwt_secret_key_here
 EMAIL_SERVICE=gmail
-EMAIL_USER=tripathiraj3030@gmail.com
-EMAIL_PASS=kpwu vgkp mxcu qcha
+EMAIL_USER=eventempire.manager@gmail.com
+EMAIL_PASS=mylz pdkw prbp ghrb
 
 # Razorpay Configuration (Update with your credentials from https://dashboard.razorpay.com/app/keys)
-RAZORPAY_KEY_ID=rzp_test_placeholder_key_id
-RAZORPAY_KEY_SECRET=placeholder_secret_key_update_this
+RAZORPAY_KEY_ID= rzp_test_Rw918O8CuP3O6K
+RAZORPAY_KEY_SECRET=GeSuNZvU4gvfORcHP0wZFcM8
