Updates in everything and I'm tired AF :)

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,6 +17,11 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your_gmail_app_password_here
 FROM_NAME=EventEmpire Team
 
+# Nodemailer Configuration (for payment notifications)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_FROM=EventEmpire <noreply@eventempire.com>
+
 # Razorpay Payment Gateway
 # Get credentials from https://dashboard.razorpay.com/app/keys
 RAZORPAY_KEY_ID=rzp_test_your_key_id_here
